# reswc

./: .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.txt
src/: CMakeLists.txt  config.cpp  config.hpp  config_interface.hpp  main.cpp
test/: CMakeLists.txt  config_tests.cpp
